--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-slideshow-image": "^4.3.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
