--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
     "multiselect-react-dropdown": "^2.0.25",
     "primereact": "^10.8.2",
     "react": "^18.3.1",
